objects/ASI_CRM_MY_SKUPriceCost__c.object
<CustomObject>
    <description>WS to Outlet Min SP, or IntoGodownCost (IGC)</description>
    <fields>
        <fullName>ASI_CRM_Applied_To__c</fullName>
        <label>Applied To</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LS</fullName>
                </value>
                <value>
                    <fullName>HBR</fullName>
                </value>
                <value>
                    <fullName>TOT</fullName>
                </value>
                <value>
                    <fullName>CSE</fullName>
                </value>
                <value>
                    <fullName>CFA</fullName>
                </value>
                <value>
                    <fullName>SWE</fullName>
                </value>
                <value>
                    <fullName>HRT</fullName>
                </value>
                <value>
                    <fullName>HAM</fullName>
                </value>
                <value>
                    <fullName>HCO</fullName>
                </value>
                <value>
                    <fullName>HCA</fullName>
                </value>
                <value>
                    <fullName>MOT</fullName>
                </value>
                <value>
                    <fullName>WR</fullName>
                </value>
                <value>
                    <fullName>NBD</fullName>
                </value>
                <value>
                    <fullName>VIP</fullName>
                </value>
                <value>
                    <fullName>B2B</fullName>
                </value>
                <value>
                    <fullName>CVS</fullName>
                </value>
                <value>
                    <fullName>RTM</fullName>
                </value>
                <value>
                    <fullName>HYP</fullName>
                </value>
                <value>
                    <fullName>SUP</fullName>
                </value>
                <value>
                    <fullName>SWS</fullName>
                </value>
                <value>
                    <fullName>WS</fullName>
                </value>
                <value>
                    <fullName>WD</fullName>
                </value>
                <value>
                    <fullName>HIK</fullName>
                </value>
                <value>
                    <fullName>HTS</fullName>
                </value>
                <value>
                    <fullName>SSM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer_Category_Code_2__c</fullName>
        <label>Customer Category Code 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LP</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>WE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer_Category_Code__c</fullName>
        <label>Customer Category Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DPW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer_Group__c</fullName>
        <label>Customer Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OUTLETTBP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Item_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Group</label>
        <referenceTo>ASI_MFM_Item_Group__c</referenceTo>
        <relationshipLabel>SKU Prices/Costs</relationshipLabel>
        <relationshipName>SKU_Prices_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_SKU_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU Product</label>
        <referenceTo>ASI_KOR_SKU_Product__c</referenceTo>
        <relationshipLabel>SKU Prices/Costs</relationshipLabel>
        <relationshipName>SKU_Prices_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SCA_SKU_Group__c</fullName>
        <label>SCA SKU Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_IGC_Cost_Per_9Lc__c</fullName>
        <formula>(ASI_CRM_Cost__c * 900) / (ASI_CRM_SKU__r.ASI_HK_CRM_Packaging_Size__c *  ASI_CRM_SKU__r.ASI_HK_CRM_Std_Bottle_Size__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IGC Cost Per 9Lc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>SKU Prices/Costs</relationshipLabel>
        <relationshipName>ASI_CRM_IGCs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A&amp;D Budget (w/ VAT)</fullName>
                </value>
                <value>
                    <fullName>A&amp;D FOC Unit Cost</fullName>
                </value>
                <value>
                    <fullName>A&amp;P FOC Unit Cost</fullName>
                </value>
                <value>
                    <fullName>CIF</fullName>
                </value>
                <value>
                    <fullName>COGS-S/T</fullName>
                </value>
                <value>
                    <fullName>Dist. Cost</fullName>
                </value>
                <value>
                    <fullName>Duty</fullName>
                </value>
                <value>
                    <fullName>Gross Sales (List Price w/o VAT)</fullName>
                </value>
                <value>
                    <fullName>HCL Cost</fullName>
                </value>
                <value>
                    <fullName>Non ST COGS</fullName>
                </value>
                <value>
                    <fullName>Standard Cost (B Fx)</fullName>
                </value>
                <value>
                    <fullName>VAT</fullName>
                </value>
                <value>
                    <fullName>A&amp;D Budget (w/  VAT)</fullName>
                </value>
                <value>
                    <fullName>Unit Cost</fullName>
                </value>
                <value>
                    <fullName>Pocket Price</fullName>
                </value>
                <value>
                    <fullName>RSP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SKU Price/Cost</label>
    <listViews>
        <fullName>ASI_CRM_TW_SKU_Price_Costs</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Item_Group__c</columns>
        <columns>ASI_CRM_Fiscal_Year__c</columns>
        <columns>ASI_CRM_EffectiveDate__c</columns>
        <columns>ASI_CRM_Price__c</columns>
        <columns>ASI_CRM_Cost__c</columns>
        <columns>ASI_CRM_Type__c</columns>
        <columns>ASI_CRM_Applied_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_MY_SKUPriceCost__c.ASI_CRM_TW_SKU_Price_Cost</value>
        </filters>
        <label>TW SKU Price/Costs</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MY_WSSP_DEBUG</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer_Category_Code_2__c</columns>
        <columns>ASI_CRM_SKU__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_EffectiveDate__c</columns>
        <columns>ASI_CRM_Cost__c</columns>
        <columns>ASI_CRM_Price__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_MY_SKUPriceCost__c.ASI_CRM_MY_WS_SP</value>
        </filters>
        <filters>
            <field>ASI_CRM_SKU__c</field>
            <operation>contains</operation>
            <value>MUC300</value>
        </filters>
        <label>MY WSSP DEBUG</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_MY_PowerUser</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SG_Quarterly_Promo_Price</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SKU__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_EffectiveDate__c</columns>
        <columns>ASI_CRM_Price__c</columns>
        <columns>ASI_CRM_External_ID__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_MY_SKUPriceCost__c.ASI_CRM_SG_Quarterly_Promo_Price</value>
        </filters>
        <label>SG - Quarterly Promo Price</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_SG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SG_WS_to_OT_Price</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer_Category_Code_2__c</columns>
        <columns>ASI_CRM_SKU__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_EffectiveDate__c</columns>
        <columns>ASI_CRM_Cost__c</columns>
        <columns>ASI_CRM_Price__c</columns>
        <columns>ASI_CRM_External_ID__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_MY_SKUPriceCost__c.ASI_CRM_SG_Selling_Price_Per_Bottle_Wholesaler_On_Trade</value>
        </filters>
        <label>SG - WS to OT Price</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_SG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SP-{00000000}</displayFormat>
        <label>SKU PID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SKU Prices/Costs</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_MY_IGC</fullName>
        <active>true</active>
        <label>ASI CRM MY - IGC</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_MY_MinSP</fullName>
        <active>true</active>
        <label>ASI CRM MY - MinSP</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_MY_WS_SP</fullName>
        <active>true</active>
        <label>ASI CRM MY - WS SP</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_CRM_Duty_Per_Bottle</fullName>
        <active>true</active>
        <label>SG CRM Duty Per Bottle</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_CRM_FOB_Per_Bottle</fullName>
        <active>true</active>
        <label>SG CRM FOB Per Bottle</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_CRM_Handling_Cost_Per_Bottle</fullName>
        <active>true</active>
        <label>SG CRM Handling Cost Per Bottle</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_CRM_Incentive_Price_Per_Bottle</fullName>
        <active>true</active>
        <label>SG CRM Incentive Price Per Bottle</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_CRM_Standard_Cost_Per_Bottle</fullName>
        <active>true</active>
        <label>SG CRM Standard Cost Per Bottle</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_IGC</fullName>
        <active>true</active>
        <label>SG CRM IGC</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Open_Outlet_Price_Per_Bottle</fullName>
        <active>true</active>
        <label>SG CRM - Open Outlet Price Per Bottle</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Quarterly_Promo_Price</fullName>
        <active>true</active>
        <label>SG CRM - Quarterly Promo Price</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_RTM_Wholesaler_Price_Per_Bottle</fullName>
        <active>true</active>
        <label>SG CRM - RTM Wholesaler Price Per Bottle</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Selling_Price_Per_Bottle_PRS_Wholesaler</fullName>
        <active>true</active>
        <label>SG CRM Selling Price Per Bottle (PRS - Wholesaler)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Selling_Price_Per_Bottle_Wholesaler_On_Trade</fullName>
        <active>true</active>
        <label>SG CRM - Selling Price Per Bottle (Wholesaler - On Trade)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_SKU_Price_Cost</fullName>
        <active>true</active>
        <label>ASI CRM TW SKU Price Cost</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_KR_CRM_SKUPriceCost</fullName>
        <active>true</active>
        <label>KR CRM SKUPriceCost</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_KR_MFM_SKUPriceCost</fullName>
        <active>true</active>
        <label>KR MFM SKUPriceCost</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>